--- a/notebooks/getitdone_preproces.ipynb
+++ b/notebooks/getitdone_preproces.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4  On December 13, 2018, this delivery truck back...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "(26038, 13)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "4  On December 13, 2018, this delivery truck back...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "public_description    4312        0.17"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "Name: service_name, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "9.754554655870445"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "Name: referred_department, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "65  College Ave was never properly fixed by contra...  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "Name: status, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
        "0.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "(2223, 13)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "[890 rows x 13 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InProcess_df_mean.to_csv(\"../data/InProcess_df_mean.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1411,7 @@
        "Name: case_age_days, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1711,13 +1720,41 @@
        "[172 rows x 12 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby([\"service_name\"]).count().sort_values(by=\"status\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_text=df[[\"service_request_id\",'service_name','public_description']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get illigal dumping data\n",
+    "df_text_dumping=df_text[df_text.service_name == 'Illegal Dumping']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_text_dumping.to_csv('../data/df_text_dumping.csv', index=False)"
    ]
   }
  ],
